refactor controller, changed id flight