@@ -2,35 +2,27 @@ package com.example.FlightTicketProject.controller;
 
 import com.example.FlightTicketProject.dto.AirportInfoDTO;
 import com.example.FlightTicketProject.mapper.response.ExternalApiAirportResponse;
-import com.example.FlightTicketProject.service.rest.RestIntegrationService;
+import com.example.FlightTicketProject.service.rest.FlightsApiService;
 import io.swagger.annotations.Api;
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.web.bind.annotation.GetMapping;
-import org.springframework.web.bind.annotation.PathVariable;
-import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.RestController;
+import lombok.RequiredArgsConstructor;
+import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
+@RequiredArgsConstructor
 @Api(tags = "Test airport controller")
 @RequestMapping("/api/airports")
 @RestController
 public class AirportController {
 
-    private RestIntegrationService restIntegrationService;
+    private final FlightsApiService flightsApiService;
 
-    @Autowired
-    public AirportController(RestIntegrationService restIntegrationService) {
-        this.restIntegrationService = restIntegrationService;
-    }
-
-    @GetMapping("/{city}")
-    public List<AirportInfoDTO> getAirportByCity(@PathVariable String city) {
-        List<ExternalApiAirportResponse.Data> airports = restIntegrationService.findAirportByCity(city);
+    @GetMapping("/search")
+    public List<AirportInfoDTO> getAirportByCity(@RequestParam String city) {
+        List<ExternalApiAirportResponse.Data> airports = flightsApiService.findAirportByCity(city);
 
         return airports.stream()
                 .map(AirportInfoDTO::new)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
