@@ -5,46 +5,40 @@ import com.example.FlightTicketProject.entity.Payment;
 import com.example.FlightTicketProject.mapper.entity.EntityMapper;
 import com.example.FlightTicketProject.service.PaymentService;
 import io.swagger.annotations.Api;
-import org.springframework.beans.factory.annotation.Autowired;
+import lombok.RequiredArgsConstructor;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
+@RequiredArgsConstructor
 @Api("Test payment controller")
 @RequestMapping("/api/payments")
 @RestController
 public class PaymentController {
 
-    private PaymentService paymentService;
+    private final PaymentService paymentService;
 
-    private EntityMapper entityMapper;
+    private final EntityMapper entityMapper;
 
-    @Autowired
-    public PaymentController(PaymentService paymentService, EntityMapper entityMapper) {
-        this.paymentService = paymentService;
-        this.entityMapper = entityMapper;
-    }
-
-    @GetMapping("")
+    @GetMapping("/search-all-saved")
     public List<PaymentDTO> getAllPayments() {
         List<Payment> payments = paymentService.findAll();
 
         return payments.stream()
                 .map(PaymentDTO::new)
-                .collect(Collectors.toList());
+                .toList();
     }
 
-    @GetMapping("/{paymentId}")
-    public ResponseEntity<PaymentDTO> getPaymentById(@PathVariable long paymentId) {
+    @GetMapping("/search-saved")
+    public ResponseEntity<PaymentDTO> getPaymentById(@RequestParam long paymentId) {
         Payment paymentById = paymentService.findById(paymentId);
 
         return new ResponseEntity<>(new PaymentDTO(paymentById), HttpStatus.OK);
     }
 
-    @PostMapping("")
+    @PostMapping("/save")
     public ResponseEntity<PaymentDTO> savePayment(@RequestBody PaymentDTO paymentDTO) {
         Payment payment = entityMapper.mapPaymentDTOToEntity(paymentDTO);
 
